# test_task_shapes2d

./: CMakeLists.txt  LICENSE.md  README.md  TODO
src/: CMakeLists.txt
src/desktop/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  color.cpp  common.hpp  model.cpp  plotter.cpp  scene_composer.cpp  shape.cpp  shape_meta_info.cpp  shapes_registry.cpp  shapes_registry.hpp  vector2d.cpp
src/model/include/shapes/: model.hpp
src/model/include/shapes2d/: color.hpp  misc.hpp  model.hpp  model_ptr.hpp  plotter.hpp  plotter_ptr.hpp  scene_composer.hpp  shape.hpp  shape_meta_info.hpp  shape_ptr.hpp  shapes.hpp  shapes_registry.hpp  vector2d.hpp
src/model/include/shapes2d/shapes/: circle.hpp  rectangle.hpp  square.hpp  triangle.hpp
src/model/shapes/: circle.cpp  rectangle.cpp  square.cpp  triangle.cpp
src/ui/: CMakeLists.txt
src/ui/desktop/: CMakeLists.txt  main.cpp
src/ui/desktop_qml/: CMakeLists.txt  main.cpp  main.qml  main.qrc
src/ui/desktop_qml/shapes2d/gui/: main_window_controller.cpp  main_window_controller.hpp  quick_plot_area.cpp  quick_plot_area.hpp
src/ui/desktop_widgets/: CMakeLists.txt  main.cpp
src/ui/desktop_widgets/shapes2d/gui/: main_window.cpp  main_window.hpp  plot_area_widget.cpp  plot_area_widget.hpp
src/ui/qt_helper/: CMakeLists.txt
src/ui/qt_helper/include/shapes2d/gui/qt_helper/: painter_plotter.hpp
src/ui/qt_helper/src/: painter_plotter.cpp
test/: CMakeLists.txt  test_model_simple_operations.cpp
